fixed error with updating phone number, fixed color of login button, and cleaned up unnessary code for readability

--- a/public/assets/css/style.css
+++ b/public/assets/css/style.css
@@ -3,7 +3,6 @@ html, body {
   padding: 0;
   margin: 0;
   box-sizing: border-box;
-  
 }
 
 aside {
@@ -52,7 +51,7 @@ a {
   font-family: "Roboto", sans-serif;
   text-transform: uppercase;
   outline: 0;
-  background: #203A36;
+  background: #907080;
   width: 100%;
   border: 0;
   padding: 15px;
@@ -117,8 +116,6 @@ body {
   -moz-osx-font-smoothing: grayscale;      
 }
 
-
-
 .grid-container {
   
   grid-template-columns: 70px 1fr;
@@ -132,12 +129,10 @@ body {
 .header {
   background-color: #2A3036;
   grid-area: header
-
 }
 
 .container-fluid{
   padding-left: 3%;
-  
 }
 
 .nbc {
@@ -155,7 +150,6 @@ body {
 main {
   background-color: #DBDFE3;
   grid-area: main;
-
 }
 
 .footer {
@@ -163,9 +157,6 @@ main {
   grid-area: footer;
 }  
 
-/* sidenav */
-
-/* Fixed sidenav, full height */
 .sidenav {
   height: 100%;
   width: 80px;
@@ -224,9 +215,6 @@ main {
   padding-right: 8px;
 }
 
-
-
-
 .mainnote-title {
   color: black;
   padding-left: 4px;
@@ -242,10 +230,6 @@ main {
   right: 10px;
   top: 5px;
 }
-
-/* .edit-button {
-  background-color: #907080;
-} */
 
 .note-textarea:read-only {
   color: #907080;
